CHANGES.txt - 2007-04-30
------------------------

CHANGES IN CUPS V1.3

	- Documentation updates (STR #1775, STR #2130, STR #2131,
	  STR #2356)
	- Added a new printer attribute called "cups-version"
	  which reports the version of CUPS that is running
	  (STR #2240)
	- backendRunLoop() now aborts immediately on SIGTERM
	  if no data has been written yet (STR #2103)
	- Due to poor IPP support from the vendors, the SNMP
	  backend no longer tries IPP connections; instead,
	  it now uses a lookup file with fallback to port 9100
	  (socket://address) and 515 (lpd://address) printing
	  (STR #2035, STR #2354) 
	- The scheduler now recreates the CUPS log directory as
	  needed (STR #2353)
	- cupsLangDefault() now maps new-style Apple locale names
	  to the traditional ll_CC form (STR #2357)
        - Add new cupsArrayNew2() API to support hashed lookups
          of array elements (STR #2358)
        - ppdConflicts() optimizations (STR #2358)
	- The cupstestppd program now tests for existing filters,
	  icons, profiles, and dialog extensions (STR #2326)
	- The web interface no longer lists new printers on the
	  main administration page.  Instead, a new "List Available
	  Printers" button is provided that shows a separate page
	  with the list of printers.
	- The web interface now supports setting the banner and
	  policy options on raw printers and classes (STR #2238)
	- The socket backend now reads any pending back-channel
	  data before shutting down the socket (STR #2325)
	- Added a new ErrorPolicy directive in the cupsd.conf
	  file (STR #1871)
	- Printers that use JCL options are now exported to Samba
	  correctly (STR #1985)
	- The IPP backend now relays printer-state-message values
	  from the server to the client (STR #2109)
	- Added support for the PWG printer-alert and
	  printer-alert-description attributes (STR #2088)
	- Added support for LPD "stream" mode (STR #2036)
	- The scheduler now reports the PostScript product string